--- a/Projet Calculatrice/index.html
+++ b/Projet Calculatrice/index.html
@@ -27,6 +27,7 @@
         <div class="boutonreset bouton">CE</div>
         <div class="boutonmoins bouton">-</div>
         <div class="boutonplus bouton">+</div>
+        <div class="boutondeletelast bouton">Delete Last</div>
       </div>
 <script src="calc.js"></script>
 </body>
