remove functions show

--- a/Projet Calculatrice/index.html
+++ b/Projet Calculatrice/index.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculatrice</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/5131dc2a93.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div class="calculatrice">
-        <div class="bouton1 bouton">1</div>
-        <div class="bouton2 bouton">2</div>
-        <div class="bouton3 bouton">3</div>
-        <div class="bouton4 bouton">4</div>
-        <div class="bouton5 bouton">5</div>
-        <div class="bouton6 bouton">6</div>
-        <div class="bouton7 bouton">7</div>
-        <div class="bouton8 bouton">8</div>
-        <div class="bouton9 bouton">9</div>
-        <div class="bouton0 bouton">0</div>
+        <div class="bouton1 bouton chiffre">1</div>
+        <div class="bouton2 bouton chiffre">2</div>
+        <div class="bouton3 bouton chiffre">3</div>
+        <div class="bouton4 bouton chiffre">4</div>
+        <div class="bouton5 bouton chiffre">5</div>
+        <div class="bouton6 bouton chiffre">6</div>
+        <div class="bouton7 bouton chiffre">7</div>
+        <div class="bouton8 bouton chiffre">8</div>
+        <div class="bouton9 bouton chiffre">9</div>
+        <div class="bouton0 bouton chiffre">0</div>
         <div class="screen result"></div>
-        <div class="boutonfois bouton">X</div>
-        <div class="boutondivise bouton">/</div>
-        <div class="virgule bouton">,</div>
+        <div class="boutonfois bouton chiffre">*</div>
+        <div class="boutondivise bouton chiffre">/</div>
+        <div class="virgule bouton chiffre">.</div>
         <div class="boutonegal bouton">=</div>
-        <div class="boutonreset bouton">CE</div>
-        <div class="boutonmoins bouton">-</div>
-        <div class="boutonplus bouton">+</div>
-        <div class="boutondeletelast bouton">Delete Last</div>
-      </div>
-<script src="calc.js"></script>
+        <div class="boutonreset bouton">AC</div>
+        <div class="boutonmoins bouton chiffre">-</div>
+        <div class="boutonplus bouton chiffre">+</div>
+        <div class="boutondeletelast bouton"><i class="fa-solid fa-arrow-left-long"></i></div>
+    </div>
+    <script src="calc.js"></script>
 </body>
+
 </html>
