--- a/Projet Calculatrice/index.html
+++ b/Projet Calculatrice/index.html
@@ -25,15 +25,15 @@
         <div class="bouton8 bouton chiffre">8</div>
         <div class="bouton9 bouton chiffre">9</div>
         <div class="bouton0 bouton chiffre">0</div>
-        <div class="screen result"></div>
-        <div class="boutonfois bouton chiffre">*</div>
-        <div class="boutondivise bouton chiffre">/</div>
-        <div class="virgule bouton chiffre">.</div>
+        <div class="virgule bouton">.</div>
+        <div class="boutonmoins bouton operator">-</div>
+        <div class="boutonplus bouton operator">+</div>
+        <div class="boutonfois bouton operator">*</div>
+        <div class="boutondivise bouton operator">/</div>
         <div class="boutonegal bouton">=</div>
-        <div class="boutonreset bouton">AC</div>
-        <div class="boutonmoins bouton chiffre">-</div>
-        <div class="boutonplus bouton chiffre">+</div>
         <div class="boutondeletelast bouton"><i class="fa-solid fa-arrow-left-long"></i></div>
+        <div class="boutonreset bouton">AC</div>
+        <div class="screen result"></div>
     </div>
     <script src="calc.js"></script>
 </body>
